Fix entry completion not showing highlight for selected item

--- a/modules/system/desktop-environments/leaf/ags/ags-config/Style/common.scss
+++ b/modules/system/desktop-environments/leaf/ags/ags-config/Style/common.scss
@@ -543,7 +543,7 @@ button.combo:hover {
 }
 
 entry treeview {
-    background-color: $bg1;
+    //background-color: $bg1;
 }
 
 // Progress bar
